--- a/templates/about.html
+++ b/templates/about.html
@@ -44,6 +44,8 @@
 
 <!-- ARTICLE (!) -->
   <article class="about">
+    <div class="centercenter">
+
     <div class="center">
       <div class="text">
        <div class="textbox">
@@ -67,6 +69,7 @@
         </div>
        </div>
       </div>
+    </div>
     </div>
   </article>
 
