--- a/static/style/about.css
+++ b/static/style/about.css
@@ -1,91 +1,183 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
+@media only screen and (max-width:320px) {
+    div {
+
+        cursor: default;
+    }
+
+    .centercenter {
+
+        min-height: 100vh;
+        display: flex;
+        margin-top:100px;
+        margin-bottom:100px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .center {
+
+        
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .text {
+        
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .margin {
+
+        margin-bottom: 60px;
+        margin-top:30px;
+    }
 
 
+    .hyperlink {
 
-div {
+        color: black;
+        text-decoration: none;
+        list-style-type: none;
+        
+    }
 
-    cursor: default;
+    .hyperlink:hover {
+
+        text-decoration: none;
+        color: #F3D250;
+        cursor: pointer;
+    }
+
+    .textbox {
+
+        background-color: #ECECEC;
+        border-radius: 10px;
+        max-width: 1000px;
+        padding: 25px;
+        border: 25px;
+        text-align: justify;
+    }
+
+    .g {
+        text-align: center;
+    }
+
+    .mg {
+        margin: 7.5px; 
+        display: inline-block;
+        
+    }
+
+    .mg img {
+
+        border-radius: 7.5px;
+        width: 55px;
+        height: 55px;
+        -webkit-transform: scale(1.10);
+        transform: scale(1.10);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+    }
+
+    .mg img:hover{
+
+        width: 55px;
+        height: 55px;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
+@media only screen and (min-width:321px) {
+    div {
 
-.centercenter {
-  
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+        cursor: default;
+    }
 
-.center {
-
+    .centercenter {
     
-    margin-left: 75px;
-    margin-right: 75px;
-}
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top:100px;
+        margin-bottom:100px;
+    }
 
-.text {
-    
-    text-align: justify;
-    font-size: 27px;
-}
+    .center {
 
-.margin {
+        
+        margin-left: 75px;
+        margin-right: 75px;
+    }
 
-    margin-bottom: 60px;
-    margin-top:30px;
-}
+    .text {
+        
+        text-align: justify;
+        font-size: 27px;
+    }
+
+    .margin {
+
+        margin-bottom: 60px;
+        margin-top:30px;
+    }
 
 
-.hyperlink {
+    .hyperlink {
 
-    color: black;
-    text-decoration: none;
-    list-style-type: none;
-    
-}
+        color: black;
+        text-decoration: none;
+        list-style-type: none;
+        
+    }
 
-.hyperlink:hover {
+    .hyperlink:hover {
 
-    text-decoration: none;
-    color: #F3D250;
-    cursor: pointer;
-}
+        text-decoration: none;
+        color: #F3D250;
+        cursor: pointer;
+    }
 
-.textbox {
+    .textbox {
 
-    background-color: #ECECEC;
-    border-radius: 5px;
-    max-width: 1000px;
-    padding: 50px;
-    border: 50px;
-}
+        background-color: #ECECEC;
+        border-radius: 5px;
+        max-width: 1000px;
+        padding: 50px;
+        border: 50px;
+    }
 
-.g {
-    text-align: center;
-}
+    .g {
+        text-align: center;
+    }
 
-.mg {
-    margin: 7.5px; 
-    display: inline-block;
-    
-}
+    .mg {
+        margin: 7.5px; 
+        display: inline-block;
+        
+    }
 
-.mg img {
+    .mg img {
 
-    border-radius: 7.5px;
-    width: 55px;
-    height: 55px;
-    -webkit-transform: scale(1.10);
-	transform: scale(1.10);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
+        border-radius: 7.5px;
+        width: 55px;
+        height: 55px;
+        -webkit-transform: scale(1.10);
+        transform: scale(1.10);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+    }
 
-.mg img:hover{
+    .mg img:hover{
 
-    width: 55px;
-    height: 55px;
-    -webkit-transform: scale(1);
-	transform: scale(1);
+        width: 55px;
+        height: 55px;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
