--- a/static/style/contact.css
+++ b/static/style/contact.css
@@ -1,10 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
-form { 
+@media only screen and (max-width:320px) {
+  form { 
 
-  height: 100vh;
-  max-width:600px; 
-  margin:50px auto; 
+    height: 100vh;
+    max-width:250px; 
+    margin:50px auto; 
+  }
+}
+
+@media only screen and (min-width:321px) {
+  form { 
+
+    height: 100vh;
+    max-width:600px; 
+    margin:50px auto; 
+  }
 }
 
 .feedback-input {
