--- a/static/style/projects.css
+++ b/static/style/projects.css
@@ -25,67 +25,133 @@ article {
     
 }
 
-.title {
+@media only screen and (max-width:320px) {
+    .title {
+        font-size: 40px;
+        padding-bottom: 2px;
+        max-width: 250px;
+        margin-top: 10px;
+    }
 
-    font-size: 40px;
-    padding-bottom: 2px;
+
+    .stack {
+
+        font-size: 35;
+        text-align: left;
+        max-width: 250px;
+    }
+
+    .date {
+
+        font-size: 30;
+        margin-bottom: 10px;
+        text-align: right;
+        max-width: 250px;
+    }
+
+    section:nth-child(2n + 1) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 30vh;
+        background: #F3D250;
+    }
+
+    section:nth-child(2n + 1)::before {
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 15px;
+        background-image: linear-gradient(45deg, #F3D250 50%, transparent 50%),
+                    linear-gradient(-45deg, #F3D250 50%, transparent 50%);
+        background-size: 30px 30px;
+        content: '';
+    }
     
+    section:nth-child(2n + 2) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 30vh;
+        background: #90CCF4;
+    }
+
+    section:nth-child(2n + 2)::before {
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 15px;
+        background-image: linear-gradient(45deg, #90CCF4 50%, transparent 50%),
+                    linear-gradient(-45deg, #90CCF4 50%, transparent 50%);
+        background-size: 30px 30px;
+        content: '';
+    }
+} 
+
+@media only screen and (min-width:321px) {
+    .title {
+
+        font-size: 40px;
+        padding-bottom: 2px;   
+    }
+
+    .stack {
+
+        font-size: 35;
+        text-align: left;
+    }
+
+    .date {
+
+        font-size: 30;
+        margin-bottom: 2vh;;
+        text-align: right;
+    }
+
+    section:nth-child(2n + 1) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 20vh;
+        background: #F3D250;
+    }
     
+    section:nth-child(2n + 1)::before {
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 15px;
+        background-image: linear-gradient(45deg, #F3D250 50%, transparent 50%),
+                    linear-gradient(-45deg, #F3D250 50%, transparent 50%);
+        background-size: 30px 30px;
+        content: '';
+    }
+      
+    section:nth-child(2n + 2) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 20vh;
+        background: #90CCF4;
+    }
+    
+    section:nth-child(2n + 2)::before {
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 15px;
+        background-image: linear-gradient(45deg, #90CCF4 50%, transparent 50%),
+                    linear-gradient(-45deg, #90CCF4 50%, transparent 50%);
+        background-size: 30px 30px;
+        content: '';
+    }
+
 }
-
-
-.stack {
-
-    font-size: 35;
-    text-align: center;
-}
-
-.date {
-
-    font-size: 30;
-    margin-bottom: 2vh;;
-    text-align: right;
-}
-
-section:nth-child(2n + 1) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    height: 25vh;
-    background: #F3D250;
-}
-
-section:nth-child(2n + 1)::before {
-    position: absolute;
-    top: -15px;
-    width: 100%;
-    height: 15px;
-    background-image: linear-gradient(45deg, #F3D250 50%, transparent 50%),
-                linear-gradient(-45deg, #F3D250 50%, transparent 50%);
-    background-size: 30px 30px;
-    content: '';
-}
-  
-section:nth-child(2n + 2) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    height: 25vh;
-    background: #90CCF4;
-}
-
-section:nth-child(2n + 2)::before {
-    position: absolute;
-    top: -15px;
-    width: 100%;
-    height: 15px;
-    background-image: linear-gradient(45deg, #90CCF4 50%, transparent 50%),
-                linear-gradient(-45deg, #90CCF4 50%, transparent 50%);
-    background-size: 30px 30px;
-    content: '';
-}
-  
