ver 0.39 fixing top nav on desctop + cleaning code

--- a/static/style/about.css
+++ b/static/style/about.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
+/* FOR PHONE/TABLET SCREEEN */
 @media only screen and (max-width:480px) {
     div {
 
@@ -91,6 +92,8 @@
         transform: scale(1);
     }
 }
+
+/* FOR DESCTOP SCREEEN */
 @media only screen and (min-width:481px) {
     div {
 
