--- a/static/style/content.css
+++ b/static/style/content.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
+/* FOR PHONE/TABLET SCREEEN */
 @media only screen and (max-width:480px) {
     .contentplus{
     
@@ -40,6 +41,8 @@
     }
 }
 
+
+/* FOR DESCTOP SCREEEN */
 @media only screen and (min-width:481px) {
     .contentplus{
   
