--- a/static/style/home.css
+++ b/static/style/home.css
@@ -10,6 +10,7 @@ article {
   align-items: center;
 }
 
+/* FOR PHONE/TABLET SCREEEN */
 @media only screen and (max-width:480px) {
   h1 {
 
@@ -23,6 +24,7 @@ article {
   }
 }
 
+/* FOR DESCTOP SCREEEN */
 @media only screen and (min-width:481px) {
   h1 {
 
