--- a/static/style/projects.css
+++ b/static/style/projects.css
@@ -25,6 +25,7 @@ article {
     
 }
 
+/* FOR PHONE/TABLET SCREEEN */
 @media only screen and (max-width:480px) {
     .title {
         font-size: 40px;
@@ -92,6 +93,7 @@ article {
     }
 } 
 
+/* FOR DESCTOP SCREEEN */
 @media only screen and (min-width:481px) {
     .title {
 
